[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
chrono = "0.4.43"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
uuid = "1.20.0"
dotenv = "0.15.0"

