[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
chrono = { version = "0.4.43", features = ["serde"]}
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
uuid = {version =  "1.20.0", features = ["serde", "v4"] }
dotenv = "0.15.0"
thiserror = "2.0.18"
validator = { version = "0.20", features = ["derive"] }
async-trait = "0.1.89"
argon2 = "0.5.3"
password-hash = "0.5"
jsonwebtoken = "10.3.0"

